# rLLM

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.cuda  LICENSE  README.md  deny.toml  grafana_dashboard.json  openapi.yaml
.github/workflows/: ci-branches.yml  ci-dev.yml  ci-main.yml  release.yml
.github/workflows/dev/: ci.yml
crates/rllm-bench/: Cargo.toml
crates/rllm-bench/benches/: bench_main.rs
crates/rllm-bench/src/: helpers.rs  lib.rs  main.rs  metrics.rs  mock_executor.rs  serve_client.rs  workload.rs
crates/rllm-bench/tests/: acceptance.rs  correctness.rs
crates/rllm-cache/: Cargo.toml
crates/rllm-cache/src/: block_pool.rs  lib.rs  manager.rs  offload.rs  prefix.rs  spec.rs
crates/rllm-core/: Cargo.toml
crates/rllm-core/src/: config.rs  dtype.rs  error.rs  ids.rs  lib.rs  optimizations.rs  output.rs  request.rs  sequence.rs
crates/rllm-engine/: Cargo.toml
crates/rllm-engine/src/: async_engine.rs  batch_queue.rs  engine_core.rs  lib.rs  sync_engine.rs
crates/rllm-engine/tests/: engine_tests.rs
crates/rllm-executor/: Cargo.toml
crates/rllm-executor/src/: executor.rs  lib.rs  multiproc.rs  uniproc.rs
crates/rllm-kernels/: Cargo.toml  build.rs
crates/rllm-kernels/src/: attention.rs  cache_ops.rs  cuda.rs  fused.rs  lib.rs  quant_matmul.rs
crates/rllm-kernels/src/cuda/: cache_ops.cu  fused.cu  paged_attention.cu  quant_matmul.cu  smoke.cu
crates/rllm-metrics/: Cargo.toml
crates/rllm-metrics/src/: lib.rs
crates/rllm-model/: Cargo.toml
crates/rllm-model/src/: hf_config.rs  layers.rs  lib.rs  llama.rs  loader.rs  registry.rs  rope.rs  runner.rs
crates/rllm-quant/: Cargo.toml
crates/rllm-quant/src/: int8.rs  lib.rs  method.rs  qtensor.rs  schema.rs  unquant.rs
crates/rllm-sampling/: Cargo.toml
crates/rllm-sampling/src/: lib.rs  logits.rs  logprobs.rs  sampler.rs  speculative.rs
crates/rllm-scheduler/: Cargo.toml
crates/rllm-scheduler/src/: lib.rs  output.rs  policy.rs  scheduler.rs
crates/rllm-server/: Cargo.toml
crates/rllm-server/src/: auth.rs  cli.rs  lib.rs  openai.rs  server.rs
crates/rllm-server/tests/: server_integration.rs
crates/rllm-tensor/: Cargo.toml
crates/rllm-tensor/src/: device.rs  lib.rs  pinned.rs  tensor.rs
crates/rllm-tokenizer/: Cargo.toml
crates/rllm-tokenizer/src/: chat_template.rs  detokenizer.rs  lib.rs  pool.rs  tokenizer.rs
crates/rllm-worker/: Cargo.toml  build.rs
crates/rllm-worker/src/: batch.rs  lib.rs  model_runner.rs  overlap.rs  worker.rs
docs/: architecture.md  building.md
examples/: offline_generate.rs  server.rs
scripts/: concurrency_test.py  verify_cuda_build.sh
src/: main.rs
