[package]
name = "rllm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "rLLM: A Rust LLM inference engine inspired by vLLM"

[dependencies]
rllm-core.workspace = true
rllm-server.workspace = true
rllm-engine.workspace = true
rllm-tokenizer.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[features]
default = []
cuda = ["rllm-server/cuda"]
candle-backend = ["rllm-server/candle-backend"]

[[example]]
name = "offline_generate"
path = "examples/offline_generate.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[workspace]
resolver = "2"
members = [
    "crates/rllm-core",
    "crates/rllm-tokenizer",
    "crates/rllm-model",
    "crates/rllm-tensor",
    "crates/rllm-kernels",
    "crates/rllm-cache",
    "crates/rllm-scheduler",
    "crates/rllm-sampling",
    "crates/rllm-worker",
    "crates/rllm-executor",
    "crates/rllm-engine",
    "crates/rllm-server",
    "crates/rllm-bench",
    "crates/rllm-metrics",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/ghyathmoussa/rLLM"
homepage = "https://github.com/ghyathmoussa/rLLM"
documentation = "https://docs.rs/rllm"

[workspace.dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs and collections
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6"
smallvec = "1"
indexmap = "2"

# Tokenizer and model loading
# default features dropped: `esaxx_fast` (C++ suffix-automaton, BPE *training* only)
# and `progressbar` are never used for inference, and `esaxx_fast` breaks musl-static
# builds (needs a musl C++ toolchain). `onig` is kept for tokenizer regex support.
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls", "ureq"] }
safetensors = "0.6"
minijinja = "2"

# Candle tensor framework
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

# HTTP server
axum = "0.8"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Streaming
async-stream = "0.3"
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Random
rand = "0.9"
rand_chacha = "0.9"

# Observability
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Benchmarking
criterion = { version = "0.6", features = ["html_reports"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
proptest = "1"

# Constant-time comparison
subtle = "2"

# CUDA runtime driver API wrappers
# `fallback-latest` makes cudarc use its highest known bindings instead of
# panicking when the installed CUDA toolkit is newer than it recognizes
# (e.g. CUDA 13.3). Prefer matching the toolkit (CUDA 12.x) for tested builds.
cudarc = { version = "0.19.7", features = ["driver", "fallback-latest"] }
libc = "0.2"


# Hashing
sha2 = "0.10"
ciborium = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Internal crates
rllm-core = { path = "crates/rllm-core", version = "0.1.0" }
rllm-tokenizer = { path = "crates/rllm-tokenizer", version = "0.1.0" }
rllm-model = { path = "crates/rllm-model", version = "0.1.0" }
rllm-tensor = { path = "crates/rllm-tensor", version = "0.1.0" }
rllm-kernels = { path = "crates/rllm-kernels", version = "0.1.0" }
rllm-cache = { path = "crates/rllm-cache", version = "0.1.0" }
rllm-scheduler = { path = "crates/rllm-scheduler", version = "0.1.0" }
rllm-sampling = { path = "crates/rllm-sampling", version = "0.1.0" }
rllm-worker = { path = "crates/rllm-worker", version = "0.1.0" }
rllm-executor = { path = "crates/rllm-executor", version = "0.1.0" }
rllm-engine = { path = "crates/rllm-engine", version = "0.1.0" }
rllm-server = { path = "crates/rllm-server", version = "0.1.0" }
rllm-bench = { path = "crates/rllm-bench", version = "0.1.0" }
rllm-metrics = { path = "crates/rllm-metrics", version = "0.1.0" }
