[package]
name = "rllm-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Offline and online benchmarks for rLLM"

[dependencies]
rllm-core.workspace = true
rllm-engine.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tokio.workspace = true

[[bench]]
name = "bench_main"
harness = false
