[package]
name = "rllm-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Engine core, sync/async engines, and request lifecycle for rLLM"

[dependencies]
rllm-core.workspace = true
rllm-executor.workspace = true
rllm-metrics.workspace = true
rllm-scheduler.workspace = true
rllm-sampling.workspace = true
rllm-tokenizer.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
