[package]
name = "rllm-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Single-process and multi-process executor abstraction for rLLM"

[dependencies]
rllm-core.workspace = true
rllm-cache.workspace = true
rllm-metrics.workspace = true
rllm-worker = { path = "../rllm-worker", default-features = false }
rllm-scheduler.workspace = true
rllm-sampling.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
candle-backend = ["rllm-worker/candle-backend"]
cuda = ["rllm-worker/cuda"]
experimental-tp = []
