[package]
name = "rllm-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum HTTP server with OpenAI-compatible API for rLLM"

[dependencies]
rllm-core.workspace = true
rllm-engine.workspace = true
rllm-executor.workspace = true
rllm-scheduler.workspace = true
rllm-worker.workspace = true
rllm-tokenizer.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
clap.workspace = true
uuid.workspace = true
