[package]
name = "rllm-tokenizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HF tokenizer loading, encoding, decoding, streaming detokenization, and chat templates for rLLM"

[dependencies]
rllm-core.workspace = true
rllm-metrics.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
minijinja.workspace = true
